--- a/GC.css
+++ b/GC.css
@@ -19,7 +19,7 @@ html{
 .container{
     display: grid;
     grid-template-columns: 1fr 4fr;
-    gap: 2.5rem;
+    gap: 3rem;
     margin: 0 auto; /* 10% margin on both sides */
     width: 100%; /* optional, to ensure 10% margin */
     padding: 0px;
@@ -370,7 +370,7 @@ h2{
 
 
  #navbar{
-  padding: 2.75% 10%; /* navbar padding top and left*/
+  padding: 44px 10%; /* navbar padding top and left*/
   /* box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) ; */
   font-family: "Inter Tight", sans-serif;
 
@@ -386,6 +386,9 @@ h2{
     padding: 40px 10%;
   }
 } 
+
+
+
  
  
  .top-nav {
