--- a/LastMinute.css
+++ b/LastMinute.css
@@ -268,9 +268,8 @@ to {
 
 
 
-
-#navbar{
-  padding: 2.75% 10%; /* navbar padding top and left*/
+ #navbar{
+  padding: 44px 10%; /* navbar padding top and left*/
   /* box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) ; */
   font-family: "Inter Tight", sans-serif;
 
