--- a/WCWH.css
+++ b/WCWH.css
@@ -237,9 +237,9 @@ h2{
  
 
  #navbar{
-  padding: 2.75% 10%; /* navbar padding top and left*/
+  padding: 44px 10%; /* navbar padding top and left*/
   /* box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) ; */
-  font-family: 'manrope', 'sans-serif';
+  font-family: "Inter Tight", sans-serif;
 
 }
 
