--- a/GC.css
+++ b/GC.css
@@ -39,7 +39,7 @@ html{
   color: #fff;
 }
 
-.impact-container {
+.impact-container, .sticky_note {
   display: flex;
   flex-direction: column;
   text-align: left;
@@ -279,14 +279,6 @@ h2{
   border-top: 2px solid grey;
 }
 
-.sticky_note{
-  color: #121212;
-  background-color: #ffd02f;
-  border: 2px solid #121212;
-  border-radius: 0.5rem;
-  padding: 1rem;
-  margin: 0;
-}
 
 .content-block{
     margin: 4rem 0%;
