--- a/GC.css
+++ b/GC.css
@@ -228,15 +228,15 @@ h1{
   font-size: 2rem;
   margin-top: 1%;
   opacity: 100%;
-  letter-spacing: -2%;
+  letter-spacing: -0.5px;
 
 }
 
 .big-text{
-font-size: 56px;
-margin-bottom: 1rem;
-text-transform: uppercase;
-margin: 0;
+  font-size: 48px;
+  margin-bottom: 1rem;
+  margin: 0;
+  letter-spacing: -2px;
 }
 
 .grey-caps-label{
@@ -483,46 +483,50 @@ h2{
  }
  
  @media (max-width: 850px) {
-   .menu-button-container {
-     display: flex;
-   }
-   .menu {
-     position: absolute;
-     top: 0;
-     margin-top: 50px;
-     left: 0;
-     flex-direction: column;
-     width: 100%;
-     justify-content: center;
-     align-items: center;
-   }
-   #menu-toggle ~ .menu li {
-     height: 0;
-     margin: 0;
-     padding: 0;
-     border: 0;
-     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-   }
-   #menu-toggle:checked ~ .menu li {
-     border: 1px solid #a7a7a7;
-     height: 2.5em;
-     padding: 0.5em;
-     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-   }
-   .menu > li {
-     display: flex;
-     justify-content: center;
-     margin: 0;
-     padding: 0.5em 0;
-     width: 100%;
-     color: white;
-     background: rgba(255, 255, 255, 1.0); /*Background of hamburger menu items*/
-   }
-   .menu > li:not(:last-child) {
-     border-bottom: 1px solid #444;
-   }
- }
- 
+    .menu-button-container {
+      display: flex;
+    }
+    .menu {
+      position: absolute;
+      top: 0;
+      margin-top: 80px;
+      left: 0;
+      flex-direction: column;
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+    #menu-toggle ~ .menu li {
+      height: 0;
+      margin: 0;
+      padding: 0;
+      border: 0;
+      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    }
+    #menu-toggle:checked ~ .menu li {
+      border-bottom: 0.5px solid #a7a7a7;
+      height: 2.5em;
+      padding: 0.5em;
+      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    }
+    .menu > li {
+      display: flex;
+      justify-content: center;
+      margin: 0;
+      padding: 0.5em 0;
+      width: 100%;
+      color: white;
+      background: rgba(255, 255, 255, 1.0); /*Background of hamburger menu items*/
+    }
+    .menu > li:not(:last-child) {
+      border-bottom: 0.5px solid #f7f7f7;
+    }
+
+    .menu > li:last-child {
+      border-bottom: 1px solid #444;
+    }
+  }
+  
  
  
  
