--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ html, body {
     .menu {
       position: absolute;
       top: 0;
-      margin-top: 50px;
+      margin-top: 80px;
       left: 0;
       flex-direction: column;
       width: 100%;
@@ -199,7 +199,7 @@ html, body {
       transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
     }
     #menu-toggle:checked ~ .menu li {
-      border: 1px solid #a7a7a7;
+      border-bottom: 0.5px solid #a7a7a7;
       height: 2.5em;
       padding: 0.5em;
       transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -214,11 +214,11 @@ html, body {
       background: rgba(255, 255, 255, 1.0); /*Background of hamburger menu items*/
     }
     .menu > li:not(:last-child) {
-      border-bottom: 1px solid #444;
+      border-bottom: 0.5px solid #f7f7f7;
     }
 
     .menu > li:last-child {
-      border-bottom: 4px solid #444;
+      border-bottom: 1px solid #444;
     }
   }
   
@@ -298,6 +298,7 @@ h1{
     font-size: 2rem;
     margin-top: 1%;
     opacity: 100%;
+    letter-spacing: -0.5px;
 
 }
 
@@ -305,6 +306,7 @@ h1{
   font-size: 48px;
   margin-bottom: 1rem;
   margin: 0;
+  letter-spacing: -2px;
 }
 
 .grey-caps-label{
@@ -1085,7 +1087,7 @@ text {
             display: flex;
             align-items: flex-start;
             flex-direction: column;
-            gap: 2rem;
+            gap: 0rem;
         }
 
         .project_img{
@@ -1127,6 +1129,7 @@ text {
         flex-direction: column;
         align-items: flex-start;
         gap: 0;
+      
 }
 
 
