--- a/CDSS.css
+++ b/CDSS.css
@@ -22,6 +22,17 @@
 
 }
 
+.impact-container {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  align-items: flex-start; /* Change from center to flex-start */
+  width: 100%;
+  background-color: #f9f9f9; 
+  border-radius: 24px;
+  padding: 32px;
+}
+
 .leftpanel{
     padding: 0px;
     height: fit-content;
@@ -37,6 +48,38 @@
   flex-direction: row;
   gap: 32px;
 }
+
+
+/* floating button */
+.floating-back-btn {
+    position: fixed;
+    bottom: 30px;
+    left: 30px;
+    z-index: 1000;
+    background: #292929;
+    color: #fff;
+    padding: 12px 20px;
+    border-radius: 300px;
+    text-decoration: none;
+    font-family: "Inter Tight", sans-serif;
+    font-weight: 600;
+    font-size: 0.9rem;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
+    transition: all 0.2s ease;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.floating-back-btn:hover {
+    background: #363636;
+    color: #fff;
+    text-decoration: none;
+    transform: translateY(-2px);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.125) inset;
+}
+
+/* floating button */
 
 
 .side-nav-list{
@@ -84,6 +127,10 @@ text-decoration: none;
     .leftright{
       flex-direction: column;
     }
+
+    .two-col-container{
+      grid-template-columns: 1fr;
+    }
     
 }
 
@@ -106,7 +153,7 @@ text-decoration: none;
 
 .cover{
   height: 500px; 
-  margin: 80px 0 3rem 0; 
+  margin: 80px 0 0.5rem 0; 
   background-repeat: no-repeat; 
   background-size: cover;
   background-color: #f7f7f7; 
@@ -640,11 +687,3 @@ box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 /*case study specific code*/
-
-
-
-
-
-
-
-
