--- a/IDM.css
+++ b/IDM.css
@@ -1,5 +1,3 @@
-
-
 .body{
   margin: 0px 10%;
   padding: 0px;
@@ -15,6 +13,38 @@ html{
   margin: 0;
   padding: 0;
 }
+
+/* floating button */
+.floating-back-btn {
+    position: fixed;
+    bottom: 30px;
+    left: 30px;
+    z-index: 1000;
+    background: #292929;
+    color: #fff;
+    padding: 12px 20px;
+    border-radius: 300px;
+    text-decoration: none;
+    font-family: "Inter Tight", sans-serif;
+    font-weight: 600;
+    font-size: 0.9rem;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
+    transition: all 0.2s ease;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.floating-back-btn:hover {
+    background: #363636;
+    color: #fff;
+    text-decoration: none;
+    transform: translateY(-2px);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.125) inset;
+}
+
+/* floating button */
+
 
 .container{
     display: grid;
@@ -115,6 +145,17 @@ html{
   gap: 1.5rem;
   margin: 32px 0;
  }
+
+ .impact-container {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  align-items: flex-start; /* Change from center to flex-start */
+  width: 100%;
+  background-color: #f9f9f9; 
+  border-radius: 24px;
+  padding: 32px;
+}
  
 
  .label{
@@ -219,7 +260,7 @@ letter-spacing: 0.5px;
 color: #666666;
 text-transform: uppercase;
 margin: 48px 0 0 0;
-padding-bottom: 0.5rem;
+padding-bottom: 0;
 }
 
 
@@ -264,6 +305,17 @@ h2{
   border-radius: 24px;
   width: 100%;
   height: auto; /*for now*/
+  max-width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .visual-display {
+    max-width: 100%;
+    height: auto; /* Adjust height for smaller screens */
+  }
+
+  
+  
 }
 
 .sticky_note{
@@ -771,9 +823,3 @@ h2{
 }
 
 /*reveal*/
-
-
-
-
-
-
